vercre-vci/src/snapshots/vercre_vci__authorize__tests__authzn-ok.snap
---
source: vercre-vci/src/authorize.rs
assertion_line: 420
expression: response
---
code: "[code]"
state: "1234"
redirect_uri: "http://localhost:3000/callback"
