vercre-vci/src/snapshots/vercre_vci__authorize__tests__scope-ok.snap
---
source: vercre-vci/src/authorize.rs
assertion_line: 460
expression: response
---
code: "[code]"
state: "1234"
redirect_uri: "http://localhost:3000/callback"
