vercre-vci/src/snapshots/vercre_vci__authorize__tests__scope-state.snap
---
source: vercre-vci/src/authorize.rs
assertion_line: 470
expression: state
---
expires_at: "[expires_at]"
credential_issuer: "http://vercre.io"
client_id: "did:jwk:eyJjcnYiOiJYMjU1MTkiLCJrdHkiOiJPS1AiLCJ1c2UiOiJlbmMiLCJ4IjoiM0xnOXl2aUFtVERDdVZPeUxYSTNscTlTMnBIbTczeXIzd3dBa2p3Q0FodyJ9"
credential_configuration_ids:
  - EmployeeID_JWT
holder_id: normal_user
auth:
  redirect_uri: "http://localhost:3000/callback"
  code_challenge: "[code_challenge]"
  code_challenge_method: S256
  scope: EmployeeIDCredential
